# hatch-frozen

./: README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
tests/: conftest.py
tests/_utils/test_project/: pyproject.toml
