[project]
name = "test-app"
license = "MIT"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32,<2.33"
]

[build-system]
requires = ["hatchling", "hatch-frozen @ file:///home/jairamir/dev/hatch-frozen"] # {{{hatch_frozen_cwd__}}}
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.hooks.frozen]
